--- a/css/custom-css.css
+++ b/css/custom-css.css
@@ -1368,7 +1368,8 @@
   --e-global-typography-accent-font-family: "Roboto";
   --e-global-typography-accent-font-weight: 500;
 }
-.elementor-section.elementor-section-boxed > .elementor-container {
+.
+.elementor-section-boxed > .elementor-container {
   max-width: 1170px;
 }
 .elementor-widget:not(:last-child) {
@@ -4060,6 +4061,9 @@
 .elementor-section.elementor-section-boxed > .elementor-container {
   max-width: 1170px;
 }
+
+
+
 .elementor-widget:not(:last-child) {
   margin-bottom: 0px;
 }
@@ -4512,7 +4516,7 @@
   .elementor-element.elementor-element-3819d2cc
   > .elementor-motion-effects-container
   > .elementor-motion-effects-layer {
-  background-image: url("../upload/bw.jpg");
+  
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
